# FolderSync

./: CMakeLists.txt  foldSync.cpp  foldSync.h  main.cpp
